Fix messages overflow problem, added focus on last message, save each message in db

--- a/chatapp/static/css/chat.css
+++ b/chatapp/static/css/chat.css
@@ -21,10 +21,19 @@
   border: 1px solid #ddd;
   display: flex;
   flex-direction: column;
+
+}
+
+.messages-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  scroll-behavior: smooth;
 }
 
 .message {
-  display: inline-block;
+  display: block;
   padding: 10px 15px;
   border-radius: 20px;
   margin-bottom: 10px;
@@ -58,6 +67,7 @@
 }
 
 .chat-form{
+  position: sticky;
   margin-top: auto;
 }
 
@@ -77,3 +87,4 @@
 .chat-submit:hover{
   background-color: hsl(120, 73%, 75%, 70%);
 }
+
